# HueGraphics

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  docker-compose.yml  nginx.conf
docs/: KINECT_SETUP.md
scripts/: run-dev.bat  run-dev.sh  start-dev.ps1  start-dev.sh
src/backend/: Dockerfile  HueGraphics.sln  README.md
src/backend/HueGraphics.API/: HueGraphics.API.csproj  Program.cs  appsettings.example.json  test_enum.json
src/backend/HueGraphics.API/Attributes/: ApiKeyAuthAttribute.cs
src/backend/HueGraphics.API/Controllers/: KinectController.cs  PointCloudController.cs
src/backend/HueGraphics.API/Hubs/: KinectHub.cs
src/backend/HueGraphics.API/Services/: KinectHubBroadcaster.cs
src/backend/HueGraphics.Application/: HueGraphics.Application.csproj
src/backend/HueGraphics.Application/Interfaces/: IBackgroundProcessingService.cs  ICleanupService.cs  IKinectHubClient.cs  IKinectService.cs  IModelUploadService.cs
src/backend/HueGraphics.Core/Interfaces/: IPointCloudService.cs
src/backend/HueGraphics.Core/Models/: EptMetadata.cs  (+3 more)
src/backend/HueGraphics.Domain/: KinectPointCloudFrame.cs  KinectStreamStatus.cs
src/backend/HueGraphics.Infrastructure/: HueGraphics.Infrastructure.csproj
src/client/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
src/client/src/: App.jsx  index.css
src/kinect-bridge/: KinectBridge.csproj  Program.cs
src/model_parser/: Cargo.toml  README.md  STREAMING_API.md
src/model_parser/src/: config.rs  ept.rs  error.rs  lib.rs  main.rs  parser.rs  point_cloud.rs
(+42 files in other folders)
