[package]
name = "model_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "model_parser"
path = "src/main.rs"

[lib]
name = "model_parser"
path = "src/lib.rs"

[dependencies]
gltf = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
glam = "0.29"
rand = "0.8"
bincode = "1.3"

[features]
default = []
ept = []

[dev-dependencies]
approx = "0.5"
