[package]
name = "model_parser"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "model_parser"
path = "src/main.rs"

[lib]
name = "model_parser"
path = "src/lib.rs"

[dependencies]
gltf = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
glam = "0.30"
rand = "0.9"
bincode = "2.0"
rayon = "1.10"  # Parallel processing
parking_lot = "0.12"  # Faster synchronization primitives

[features]
default = []
ept = []

[dev-dependencies]
approx = "0.5"
